bin_PROGRAMS = transporter
transporter_SOURCES = main.cpp \
					  args/argsparser.cpp \
					  args/serverargs.cpp \
					  args/clientargs.cpp \
					  					  \
					  net/netendpointcreator.cpp	\
					  net/iserver.cpp	\
					  net/tcpserver.cpp \
					  net/iclient.cpp \
					  net/tcpclient.cpp \
					  net/transport.cpp \
					  net/session.cpp